--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
             margin: 0;
             padding: 0;
             height: 100%;
-            font-family: 'Georgia', serif;
+            font-family: 'Helvetica', 'Arial', sans-serif;
             display: flex;
             justify-content: center;
             align-items: center;
-            text-align: center;
             background-color: #fff;
         }
         .container {
-            max-width: 600px;
+            max-width: 500px;
+            text-align: left;
             padding: 20px;
         }
         h1 {
@@ -27,21 +27,31 @@
         }
         p {
             font-style: italic;
-            margin-bottom: 10px;
+            font-size: 16px;
+            line-height: 1.5;
+            margin-bottom: 20px;
+        }
+        .rose {
+            font-size: 24px;
+            text-align: center;
+            margin: 20px 0;
         }
         .links {
-            margin-top: 30px;
+            margin-top: 20px;
             border-top: 1px solid black;
             padding-top: 10px;
+            font-size: 16px;
+        }
+        .links div {
+            margin: 10px 0;
         }
         .links a {
             color: black;
             text-decoration: underline;
-            margin: 0 10px;
         }
-        .rose {
-            font-size: 24px;
-            margin: 20px 0;
+        strong {
+            display: inline-block;
+            width: 70px;
         }
     </style>
 </head>
@@ -52,10 +62,10 @@
         <div class="rose">🌹</div>
         <div class="links">
             <div>
-                <strong>1817</strong> <a href="https://1817.lisy.app">click here</a> for stories 📚 voices 🐚 wonder ✨
+                <strong>1817</strong> <a href="https://1817.lisy.app" target="_blank">click here</a> for stories 📚 voices 🐚 wonder ✨
             </div>
-            <div style="margin-top: 10px;">
-                <strong>contact</strong> <a href=https://tally.so/r/3x6Gky">click here</a> and you will be answered 📩
+            <div>
+                <strong>contact</strong> <a href="https://tally.so/r/3x6Gky">click here</a> and you will be answered 📩
             </div>
         </div>
     </div>
