--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>lisy</title>
+    <title>lisy ✨</title>
     <style>
         html, body {
             margin: 0;
@@ -33,7 +33,7 @@
         }
         .rose {
             font-size: 24px;
-            text-align: center;
+            text-align: right;
             margin: 20px 0;
         }
         .links {
@@ -49,7 +49,7 @@
             color: black;
             text-decoration: underline;
         }
-        strong {
+        .label {
             display: inline-block;
             width: 70px;
         }
@@ -62,10 +62,10 @@
         <div class="rose">🌹</div>
         <div class="links">
             <div>
-                <strong>1817</strong> <a href="https://1817.lisy.app" target="_blank">click here</a> for stories 📚 voices 🐚 wonder ✨
+                <span class="label">1817</span> <a href="https://1817.lisy.app" target="_blank">click here</a> for stories 📚 voices 🐚 wonder ✨
             </div>
             <div>
-                <strong>contact</strong> <a href="https://tally.so/r/3x6Gky">click here</a> and you will be answered 📩
+                <span class="label">contact</span> <a href="https://tally.so/r/3x6Gky">click here</a> and you will be answered 📩
             </div>
         </div>
     </div>
