--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         }
         .rose {
             font-size: 24px;
-            text-align: right;
+            text-align: left;
             margin: 20px 0;
         }
         .links {
