--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
         <div class="rose">🌹</div>
         <div class="links">
             <div>
+                <span class="label">atlas</span> <a href="https://atlas.lisy.app" target="_blank">click here</a> for malagasy language, and beyond 🏄‍♂️
+            </div>
+            <div>
                 <span class="label">1817</span> <a href="https://1817.lisy.app" target="_blank">click here</a> for stories 📚 voices 🐚 wonder ✨
             </div>
             <div>
