--- a/index.html
+++ b/index.html
@@ -1,76 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>lisy ✨</title>
-    <style>
-        html, body {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            font-family: 'Helvetica', 'Arial', sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: #fff;
-        }
-        .container {
-            max-width: 500px;
-            text-align: left;
-            padding: 20px;
-        }
-        h1 {
-            font-weight: normal;
-            font-size: 24px;
-            margin-bottom: 20px;
-        }
-        p {
-            font-style: italic;
-            font-size: 16px;
-            line-height: 1.5;
-            margin-bottom: 20px;
-        }
-        .rose {
-            font-size: 24px;
-            text-align: left;
-            margin: 20px 0;
-        }
-        .links {
-            margin-top: 20px;
-            border-top: 1px solid black;
-            padding-top: 10px;
-            font-size: 16px;
-        }
-        .links div {
-            margin: 10px 0;
-        }
-        .links a {
-            color: black;
-            text-decoration: underline;
-        }
-        .label {
-            display: inline-block;
-            width: 70px;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>lisy ✨</title>
+
+  <!-- Font for titles -->
+  <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">
+
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      font-family: 'DM Serif Display', serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #fff;
+    }
+
+    .container {
+      max-width: 500px;
+      text-align: left;
+      padding: 20px;
+    }
+
+    h1 {
+      font-weight: normal;
+      font-size: 24px;
+      margin-bottom: 20px;
+    }
+
+    p {
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+      font-style: italic;
+      font-size: 16px;
+      line-height: 1.5;
+      margin-bottom: 20px;
+    }
+
+    .rose {
+      font-size: 24px;
+      text-align: left;
+      margin: 20px 0;
+      display: inline-block;
+      animation: bounce 0.6s ease-out 0.5s 1 forwards;
+      opacity: 0;
+    }
+
+    @keyframes bounce {
+      0% { transform: translateY(0); opacity: 0; }
+      30% { transform: translateY(-20px); opacity: 1; }
+      60% { transform: translateY(10px); }
+      100% { transform: translateY(0); }
+    }
+
+    .links {
+      margin-top: 20px;
+      border-top: 1px solid black;
+      padding-top: 10px;
+      font-size: 16px;
+    }
+
+    .links div {
+      margin: 10px 0;
+    }
+
+    .links a {
+      color: black;
+      text-decoration: underline;
+    }
+
+    .label {
+      display: inline-block;
+      width: 70px;
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <h1>lisy____</h1>
-        <p><em>these days, it is said that <a href="https://mosenjo.com" target="_blank">mose njo</a> mostly speaks on behalf of someone named lisy. she started as a story. now she’s about to start a universe.</em></p>
-        <div class="rose">🌹</div>
-        <div class="links">
-            <div>
-                <span class="label">atlas</span> <a href="https://atlas.lisy.app" target="_blank">click here</a> for the love of malagasy language—but not only 🏄‍♂️
-            </div>
-            <div>
-                <span class="label">1817</span> <a href="https://1817.lisy.app" target="_blank">click here</a> for stories 📚 voices 🐚 wonder ✨
-            </div>
-            <div>
-                <span class="label">contact</span> <a href="https://tally.so/r/3x6Gky">click here</a> and you will be answered 📩
-            </div>
-        </div>
+  <div class="container">
+    <h1>lisy____</h1>
+    <p><em>these days, it is said that <a href="https://mosenjo.com" target="_blank">mose njo</a> mostly speaks on behalf of someone named lisy. she started as a story. now she’s about to start a universe.</em></p>
+    <div class="rose">🌹</div>
+    <div class="links">
+      <div>
+        <span class="label">atlas</span> <a href="https://atlas.lisy.app" target="_blank">click here</a> for the love of malagasy language—but not only 🏄‍♂️
+      </div>
+      <div>
+        <span class="label">1817</span> <a href="https://1817.lisy.app" target="_blank">click here</a> for stories 📚 voices 🐚 wonder ✨
+      </div>
+      <div>
+        <span class="label">contact</span> <a href="https://tally.so/r/3x6Gky">click here</a> and you will be answered 📩
+      </div>
     </div>
+  </div>
 </body>
 </html>
