--- a/index.html
+++ b/index.html
@@ -4,16 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>lisy ✨</title>
-
-  <!-- Font for titles -->
-  <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">
-
   <style>
     html, body {
       margin: 0;
       padding: 0;
       height: 100%;
-      font-family: 'DM Serif Display', serif;
+      font-family: 'Helvetica', 'Arial', sans-serif;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -33,7 +29,6 @@
     }
 
     p {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
       font-style: italic;
       font-size: 16px;
       line-height: 1.5;
@@ -46,12 +41,11 @@
       margin: 20px 0;
       display: inline-block;
       animation: bounce 0.6s ease-out 0.5s 1 forwards;
-      opacity: 0;
     }
 
     @keyframes bounce {
-      0% { transform: translateY(0); opacity: 0; }
-      30% { transform: translateY(-20px); opacity: 1; }
+      0% { transform: translateY(0); }
+      30% { transform: translateY(-20px); }
       60% { transform: translateY(10px); }
       100% { transform: translateY(0); }
     }
