Add favicon link to index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>lisy.app ✨</title>
   <meta name="description" content="lisy — stories, language, and a growing universe.">
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>🌹</text></svg>">
   <style>
     :root {
       --lisy-blue: #00C2FF;
