Change contact link to new Tally URL
Updated contact link to a new URL.

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       <div class="row">
         <span class="label">contact</span>
         <div class="copy">
-          <a href="https://tally.so/r/3x6Gky" target="_blank" rel="noopener">click here</a>
+          <a href="https://tally.so/r/ja6XXa" target="_blank" rel="noopener">click here</a>
           and you will be answered 📩
         </div>
       </div>
